Change .homepage-hidden-search to fixed to prevent page from jumping so much

--- a/sass/_page-home.scss
+++ b/sass/_page-home.scss
@@ -109,7 +109,7 @@
 }
 
 .homepage-hidden-search {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: -9999px;
     opacity: 0;
